nav alignment fix

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -762,6 +762,11 @@ footer {
         margin: 0 0 30px;
     }
 }
+@media only screen and (max-width: 768px) {
+    .widget.extendednavigation {
+        width:100%;
+    }
+}
 
 
 /* ===============================
